Bug 167679 - "No character border" explicit formatting is not exported to RTF
Summary: "No character border" explicit formatting is not exported to RTF
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.1
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-26 15:42 UTC by Mike Kaganski
Modified: 2025-08-11 10:13 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
A direct "no character border" format applied over a style with character border (1.49 KB, application/vnd.oasis.opendocument.text)
2025-07-26 15:42 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-07-26 15:42:59 UTC
Created attachment 202008 [details]
A direct "no character border" format applied over a style with character border

Save the attachment as RTF, and reload.

=> the characters "eth" in the middle, that don't have a border in the original document, now have the border.
Comment 1 Mike Kaganski 2025-07-26 16:54:39 UTC
https://gerrit.libreoffice.org/c/core/+/188418
Comment 2 Commit Notification 2025-07-28 09:13:07 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cf60cb680e85b80821f9ca9adcb0647428e0027f

tdf#167679: RTF already can export \brdrnone

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-08-11 10:13:45 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/1749f616197fc10100ceacd974b4e45ce8a02bcd

tdf#167679: RTF already can export \brdrnone

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.