tdf#167679: RTF already can export \brdrnone

In commit f84b33275f6cce21e93e5dd20f3de5df84df0276 (tdf#129522
ww8import/export: allow char shadow_NONE overrides, 2020-01-04),
export of char shadow was implemented, which made CharBorder to
be called for missing borderline. But it made an exception for
RTF, because at that time, its code couldn't handle that.

In commit eca3ce35fe9a346965a32f42d02cb6d3f5a3982f (tdf#129631
writerfilter,sw: RTF import of invalid border..., 2022-08-11),
RTF export got ability to handle that.

Removal of the exception for RTF fixed missing export of "no
border" and "no shadow" character formatting.

Change-Id: I5f23b09558d32b403e0c26c727ee01f79374e54d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188426
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>