sw/source/filter/ww8/ww8atr.cxx
@@ -5998,17 +5998,13 @@ void AttributeOutputBase::FormatCharBorder( const SvxBoxItem& rBox )
        nDist = rBox.GetDistance( SvxBoxItemLine::RIGHT );
     }
 
-    // RTF: avoid regressions since RTF doesn't know how to export a border_NONE style-override
-    if( pBorderLine || GetExport().GetExportFormat() != MSWordExportBase::ExportFormat::RTF )
-    {
-        const SfxPoolItem* pItem = GetExport().HasItem( RES_CHRATR_SHADOW );
-        const SvxShadowItem* pShadowItem = static_cast<const SvxShadowItem*>(pItem);
-        const bool bShadow = pBorderLine &&
-            pShadowItem && pShadowItem->GetLocation() != SvxShadowLocation::NONE &&
-            pShadowItem->GetWidth() > 0;
+    const SfxPoolItem* pItem = GetExport().HasItem( RES_CHRATR_SHADOW );
+    const SvxShadowItem* pShadowItem = static_cast<const SvxShadowItem*>(pItem);
+    const bool bShadow = pBorderLine &&
+        pShadowItem && pShadowItem->GetLocation() != SvxShadowLocation::NONE &&
+        pShadowItem->GetWidth() > 0;
 
-        CharBorder( pBorderLine, nDist, bShadow );
-    }
+    CharBorder( pBorderLine, nDist, bShadow );
 }
 
 /*
